Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
None
-
Qt Creator 7.0.0-beta1
-
None
-
-
09daa5ddfd (qt-creator/qt-creator/master) 09daa5ddfd (qt-creator/qt-creator/qmlprojectstorage)
Description
In order to run a WebAssembly application, the runconfiguration calls emscripten's emrun tool with <targetname>.html as parameter.
The target name is taken from the buildKey. That works well with cmake-based projects, since the buildKey appears to match the current target name. With qmake, the buildKey corresponds to the absolute path of the project file.
So, these are the two different html file names that are generated for the two build systems:
CMake
C:/Users/alportal/dev/qtcreator-bug-snippets/QTCREATORBUG-25030/build-qtwidgets-Qt_6_2_2_WebAssembly-Debug/qtwidgets-cmake.html
qmake
C:/Users/alportal/dev/qtcreator-bug-snippets/QTCREATORBUG-25030/build-qtwidgets-qmake-Qt_6_2_2_WebAssembly-Debug/C:/Users/alportal/dev/qtcreator-bug-snippets/QTCREATORBUG-25030/qtwidgets/qtwidgets-qmake.pro.html
Attachments
Issue Links
- resulted from
-
QTCREATORBUG-26562 WebAssembly: CMake-based Qt 6.2 QtQuick application cannot be run
-
- Closed
-